modified travis for testing along with many other things

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <outputDirectory>$TRAVIS_BUILD_DIR</outputDirectory>
     </build>
 
     <repositories>
