--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ script:
 - NAME=$(mvn -q -Dexec.executable="echo" -Dexec.args='${project.artifactId}-${project.version}' --non-recursive org.codehaus.mojo:exec-maven-plugin:1.3.1:exec 2>/dev/null)
 - mv proxy-launcher-*-jar-with-dependencies.jar $NAME.jar
 - ls
-- JAR=$CWD/proxy-launcher.jar
+- JAR=$(pwd)/proxy-launcher.jar
 - echo $JAR
 deploy:
   skip_cleanup: true
