--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: java
 script:
 - mvn assembly:assembly
 - NAME=$(mvn -q -Dexec.executable="echo" -Dexec.args='${project.artifactId}-${project.version}' --non-recursive org.codehaus.mojo:exec-maven-plugin:1.3.1:exec 2>/dev/null)
+- echo $NAME
 - cd target
-- mv proxy-launcher-*-jar-with-dependencies.jar $NAME.jar
+- mv proxy-launcher-*-jar-with-dependencies.jar $(echo $NAME).jar
 - ls
 - JAR=$(pwd)/proxy-launcher.jar
 - echo $JAR
