--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@ language: java
 script:
 - mvn assembly:assembly
 - NAME=$(mvn -q -Dexec.executable="echo" -Dexec.args='${project.artifactId}' --non-recursive org.codehaus.mojo:exec-maven-plugin:1.3.1:exec 2>/dev/null)
-- VERSION=$(mvn -q -Dexec.executable="echo" -Dexec.args='${project.artifactId}' --non-recursive org.codehaus.mojo:exec-maven-plugin:1.3.1:exec 2>/dev/null)
+- VERSION=$(mvn -q -Dexec.executable="echo" -Dexec.args='${project.version}' --non-recursive org.codehaus.mojo:exec-maven-plugin:1.3.1:exec 2>/dev/null)
 - FILENAME=$(echo $NAME)-$(echo $VERSION)
-- echo $FILENAME
 - cd target
 - mv proxy-launcher-*-jar-with-dependencies.jar $(echo $FILENAME).jar
 - JAR=$(pwd)/$(echo $FILENAME).jar
-- echo $JAR
 deploy:
   skip_cleanup: true
   provider: releases
