--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 script:
 - mvn assembly:assembly
 - NAME=$(mvn -q -Dexec.executable="echo" -Dexec.args='${project.artifactId}' --non-recursive org.codehaus.mojo:exec-maven-plugin:1.3.1:exec 2>/dev/null)
-- VERSION=$(mvn -q -Dexec.executable="echo" -Dexec.args='${project.version}' --non-recursive org.codehaus.mojo:exec-maven-plugin:1.3.1:exec 2>/dev/null)
+- VERSION=$(echo $(git log --format="%H" -n 1) | cut -c1-7)
 - FILENAME=$(echo $NAME)-$(echo $VERSION)
 - cd target
 - mv proxy-launcher-*-jar-with-dependencies.jar $(echo $FILENAME).jar
